--- a/i18n/nl/code.json
+++ b/i18n/nl/code.json
@@ -1,9 +1,9 @@
 {
   "docs.bativolt.com - Le Guide RGIE et la Référence en Documentation de Conformité Électrique en Belgique": {
-    "message": "docs.bativolt.com - AREI-Gids en Documentatie voor Elektrische Conformiteit in België"
+    "message": "docs.bativolt.com - AREI-Gids en Documentatie voor Elektrische Keuringen in België"
   },
   "Accédez à des ressources complètes pour la conformité électrique : guide RGIE, conseils pratiques, et mise en relation avec des agences de conformité et électriciens agréés, gratuitement.": {
-    "message": "Toegang tot volledige bronnen voor elektrische conformiteit: AREI-gids, praktische tips en verbinding met erkende agentschappen en elektriciens, gratis."
+    "message": "Toegang tot volledige bronnen voor elektrische keuringen: AREI-gids, praktische tips en verbinding met erkende agentschappen en elektriciens, gratis."
   },
   "Accéder au Guide RGIE": {
     "message": "Toegang tot de AREI-Gids"
