--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -5,47 +5,47 @@
   },
   "link.title.Communauté": {
     "message": "Community",
-    "description": "The title of the footer links column with title=Community in the footer"
+    "description": "The title of the footer links column with title=Communauté in the footer"
   },
   "link.title.Plus": {
     "message": "More",
-    "description": "The title of the footer links column with title=More in the footer"
+    "description": "The title of the footer links column with title=Plus in the footer"
   },
   "link.item.label.Guide R.G.I.E.": {
     "message": "Electrical Regulations Guide",
-    "description": "The label of footer link with label=Electrical Regulations Guide linking to /docs/guide-rgie/introduction"
+    "description": "The label of footer link with label=Guide R.G.I.E. linking to /docs/guide-rgie/introduction"
   },
   "link.item.label.Checklist Conformité": {
     "message": "Compliance Checklist",
-    "description": "The label of footer link with label=Compliance Checklist linking to /docs/checklist/introduction"
+    "description": "The label of footer link with label=Checklist Conformité linking to /docs/checklist/introduction"
   },
   "link.item.label.Infractions Fréquentes": {
     "message": "Frequent Violations",
-    "description": "The label of footer link with label=Frequent Violations linking to /docs/infractions/introduction"
+    "description": "The label of footer link with label=Infractions Fréquentes linking to /docs/infractions/introduction"
   },
   "link.item.label.Trouver un Électricien": {
     "message": "Find an Electrician",
-    "description": "The label of footer link with label=Find an Electrician linking to /electriciens-region"
+    "description": "The label of footer link with label=Trouver un Électricien linking to /electriciens-region"
   },
   "link.item.label.Agences Agréées": {
     "message": "Certified Compliance Agencies",
-    "description": "The label of footer link with label=Certified Compliance Agencies linking to /agences-agreees"
+    "description": "The label of footer link with label=Agences Agréées linking to /agences-agreees"
   },
   "link.item.label.Instagram Bativolt": {
     "message": "Bativolt Instagram",
-    "description": "The label of footer link with label=Bativolt Instagram linking to https://www.instagram.com/bativolt/"
+    "description": "The label of footer link with label=Instagram Bativolt linking to https://www.instagram.com/bativolt/"
   },
   "link.item.label.LinkedIn Bativolt": {
     "message": "Bativolt LinkedIn",
-    "description": "The label of footer link with label=Bativolt LinkedIn linking to https://www.linkedin.com/company/bativolt"
+    "description": "The label of footer link with label=LinkedIn Bativolt linking to https://www.linkedin.com/company/bativolt"
   },
   "link.item.label.Facebook Bativolt": {
     "message": "Bativolt Facebook",
-    "description": "The label of footer link with label=Bativolt Facebook linking to https://www.facebook.com/bativolt"
+    "description": "The label of footer link with label=Facebook Bativolt linking to https://www.facebook.com/bativolt"
   },
   "link.item.label.Dernières Mises à Jour": {
     "message": "Latest Updates",
-    "description": "The label of footer link with label=Latest Updates linking to /latest-updates"
+    "description": "The label of footer link with label=Dernières Mises à Jour linking to /dernieres-mises-a-jour"
   },
   "link.item.label.Bativolt.com": {
     "message": "Bativolt.com",
@@ -53,7 +53,7 @@
   },
   "link.item.label.Contactez-nous": {
     "message": "Contact Us",
-    "description": "The label of footer link with label=Contact Us linking to mailto:docs@bativolt.com"
+    "description": "The label of footer link with label=Contactez-nous linking to mailto:docs@bativolt.com"
   },
   "link.item.label.Disclaimer": {
     "message": "Disclaimer",
@@ -61,7 +61,7 @@
   },
   "link.item.label.Confidentialité": {
     "message": "Privacy Policy",
-    "description": "The label of footer link with label=Privacy Policy linking to /policy"
+    "description": "The label of footer link with label=Confidentialité linking to /policy"
   },
   "copyright": {
     "message": "Copyright © 2024 Bativolt. All rights reserved.",
