search bar electrician

--- a/src/pages/electriciens-region.mdx
+++ b/src/pages/electriciens-region.mdx
@@ -47,6 +47,13 @@ Notre future fonctionnalité de recherche dynamique vous permettra de trouver fa
 
 ---
 
+import ElectricianSearch from '@site/src/components/ElectricianSearch';
+
+# Trouver un Électricien dans votre Région
+
+<ElectricianSearch />
+
+
 ## 📞 Devenir Partenaire : Rejoignez Notre Liste d'Électriciens Agréés
 
 Nous invitons tous les **électriciens agréés en Belgique** à rejoindre notre liste d’experts pour être facilement accessibles par notre audience de particuliers et professionnels. En figurant sur notre site, vous augmentez votre visibilité et bénéficiez d'un **trafic ciblé** de clients potentiels cherchant des services électriques de qualité.
