--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -525,7 +525,7 @@
     "message": "🕵️‍♂️ Enter the postal code of your area and press \"Search\" to find certified electricians serving there."
   },
   "search.tva": {
-    "message": "🔍 VAT Number"
+    "message": "🔍 VAT n°"
   },
   "search.registeredSince": {
     "message": "📅 Registered Since"
