--- a/i18n/nl/code.json
+++ b/i18n/nl/code.json
@@ -525,7 +525,7 @@
     "message": "🕵️‍♂️ Voer de postcode van uw regio in en druk op \"Zoeken\" om gecertificeerde elektriciens te vinden die daar werken."
   },
   "search.tva": {
-    "message": "🔍 BTW-Nummer"
+    "message": "🔍 BTW-n°"
   },
   "search.registeredSince": {
     "message": "📅 Geregistreerd Sinds"
