--- a/i18n/en/docusaurus-plugin-content-pages/electriciens-region.mdx
+++ b/i18n/en/docusaurus-plugin-content-pages/electriciens-region.mdx
@@ -48,6 +48,14 @@ Our future dynamic search feature will allow you to easily find a **qualified el
 
 ---
 
+import ElectricianSearch from '@site/src/components/ElectricianSearch';
+
+# Find your certified electrician
+
+<ElectricianSearch />
+
+---
+
 ## 📞 Become a Partner: Join Our Certified Electrician List
 
 We invite all **certified electricians in Belgium** to join our expert list for better accessibility by our audience of homeowners and professionals. Listing on our site boosts your visibility and connects you with a **targeted traffic** of potential clients seeking quality electrical services.
