--- a/i18n/nl/docusaurus-plugin-content-pages/electriciens-region.mdx
+++ b/i18n/nl/docusaurus-plugin-content-pages/electriciens-region.mdx
@@ -47,6 +47,14 @@ Onze dynamische zoekfunctie zal u in staat stellen eenvoudig een **gekwalificeer
 
 ---
 
+import ElectricianSearch from '@site/src/components/ElectricianSearch';
+
+# Vindt een erkende elektricien in uw regio
+
+<ElectricianSearch />
+
+---
+
 ## 📞 Word Partner: Sluit Aan bij Onze Lijst van Erkende Elektriciens
 
 We nodigen alle **erkende elektriciens in België** uit om deel te nemen aan onze lijst, zodat ze gemakkelijk gevonden kunnen worden door particulieren en professionals. Door opgenomen te worden op onze site, vergroot u uw zichtbaarheid en bereikt u **gerichte klanten** die op zoek zijn naar kwaliteitsdiensten.
