--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -513,7 +513,7 @@
     "message": "Our platform evolves constantly to meet user needs and adapt to new standards. Enjoy regular updates and new features for comprehensive support."
   },
   "search.title": {
-    "message": "Search for an Electrician by Postal Code (Beta Version)"
+    "message": "Search for an Electrician by Postal Code"
   },
   "search.placeholder": {
     "message": "Enter postal code..."
